feat: generate client base on openapi spec for service
