# src/api/commons/dtos/responses/data-metadata-response.dto.ts
@@ -1,12 +1,12 @@
 import { ApiProperty } from '@nestjs/swagger';
-import { DataResponse } from './data-response.dto';
+import { DataResponseDto } from './data-response.dto';
 import { MetadataResponseDto } from './metadata-response.dto';
 
 export class DataMetadataResponseDto<
   TData,
   TFilter,
-> extends DataResponse<TData> {
-  @ApiProperty({ description: 'Metadata info' })
+> extends DataResponseDto<TData> {
+  @ApiProperty({ description: 'Metadata info', type: MetadataResponseDto })
   metadata: MetadataResponseDto<TFilter>;
 
   constructor(data?: TData, metadata?: MetadataResponseDto<TFilter>) {
